[package]
name = "libsecp256k1-rs"
description = "secp256k1 implementation and utilities"
license = "BSD-3-Clause"
version = "0.2.4"
authors = ["Wei Tang <hi@that.world>", "CjS77 <>"]
repository = "https://github.com/tari-labs/libsecp256k1-rs/"
keywords = [ "crypto", "ECDSA", "secp256k1" ]

[dependencies]
rand = { version = "0.4", default-features = false }
hmac-drbg = "0.1"
sha2 = "0.6"
digest = "0.6"
typenum = "1.9"
arrayref = "0.3"
hex = "0.3.2"

[dev-dependencies]
secp256k1-test = "0.7"

[workspace]
members = [
  "./gen/ecmult",
  "./gen/genmult",
]
